--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
@@ -28,18 +28,42 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^10.1.0",
+    "@angular/common": "^10.1.0",
+    "@angular/compiler": "^10.1.0",
+    "@angular/core": "^10.1.0",
+    "@angular/forms": "^10.1.0",
+    "@angular/platform-browser": "^10.1.0",
+    "@angular/platform-browser-dynamic": "^10.1.0",
+    "@angular/router": "^10.1.0",
+    "@nrwl/angular": "^10.4.4",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.10.2"
+  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1001.3",
     "@angular/cli": "~10.1.3",
-    "@nrwl/tao": "10.4.4",
+    "@angular/compiler-cli": "^10.1.0",
+    "@angular/language-service": "^10.1.0",
     "@nrwl/cli": "10.4.4",
+    "@nrwl/jest": "10.4.4",
+    "@nrwl/tao": "10.4.4",
     "@nrwl/workspace": "10.4.4",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
     "dotenv": "6.2.0",
+    "eslint": "7.10.0",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
+    "prettier": "2.1.2",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "7.10.0",
     "typescript": "~4.0.3",
-    "prettier": "2.1.2"
+    "cypress": "^5.5.0",
+    "@nrwl/cypress": "10.4.4"
   }
 }
