feat: generate blue application

--- a/nx.json
+++ b/nx.json
@@ -22,5 +22,13 @@
       }
     }
   },
-  "projects": {}
+  "projects": {
+    "blue": {
+      "tags": ["scope:blue"]
+    },
+    "blue-e2e": {
+      "tags": [],
+      "implicitDependencies": ["blue"]
+    }
+  }
 }
