--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,120 @@
 {
   "version": 1,
-  "projects": {},
+  "projects": {
+    "blue": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "apps/blue",
+      "sourceRoot": "apps/blue/src",
+      "prefix": "blue",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/blue",
+            "index": "apps/blue/src/index.html",
+            "main": "apps/blue/src/main.ts",
+            "polyfills": "apps/blue/src/polyfills.ts",
+            "tsConfig": "apps/blue/tsconfig.app.json",
+            "aot": true,
+            "assets": ["apps/blue/src/favicon.ico", "apps/blue/src/assets"],
+            "styles": ["apps/blue/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/blue/src/environments/environment.ts",
+                  "with": "apps/blue/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "blue:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "blue:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "blue:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/blue/src/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/blue/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "blue-e2e": {
+      "root": "apps/blue-e2e",
+      "sourceRoot": "apps/blue-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/blue-e2e/cypress.json",
+            "tsConfig": "apps/blue-e2e/tsconfig.e2e.json",
+            "devServerTarget": "blue:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "blue:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/blue-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    }
+  },
   "cli": {
     "defaultCollection": "@nrwl/angular",
     "analytics": false
@@ -13,5 +127,6 @@
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
     }
-  }
+  },
+  "defaultProject": "blue"
 }
