feat: generate green application

--- a/angular.json
+++ b/angular.json
@@ -113,6 +113,119 @@
           }
         }
       }
+    },
+    "green": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "apps/green",
+      "sourceRoot": "apps/green/src",
+      "prefix": "green",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/green",
+            "index": "apps/green/src/index.html",
+            "main": "apps/green/src/main.ts",
+            "polyfills": "apps/green/src/polyfills.ts",
+            "tsConfig": "apps/green/tsconfig.app.json",
+            "aot": true,
+            "assets": ["apps/green/src/favicon.ico", "apps/green/src/assets"],
+            "styles": ["apps/green/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/green/src/environments/environment.ts",
+                  "with": "apps/green/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "green:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "green:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "green:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/green/src/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/green/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "green-e2e": {
+      "root": "apps/green-e2e",
+      "sourceRoot": "apps/green-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/green-e2e/cypress.json",
+            "tsConfig": "apps/green-e2e/tsconfig.e2e.json",
+            "devServerTarget": "green:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "green:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/green-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
     }
   },
   "cli": {
