--- a/nx.json
+++ b/nx.json
@@ -29,6 +29,13 @@
     "blue-e2e": {
       "tags": [],
       "implicitDependencies": ["blue"]
+    },
+    "green": {
+      "tags": ["scope:green"]
+    },
+    "green-e2e": {
+      "tags": [],
+      "implicitDependencies": ["green"]
     }
   }
 }
